文字サイズ調整

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body
 {
-    font-size: xx-large;
+    font-size: 40px;
 }
 
 select
@@ -11,7 +11,7 @@ select
 
 p
 {
-    font-size: x-large;
+    font-size: 30px;
 }
 
 h4
