--- a/style.css
+++ b/style.css
@@ -1,23 +1,8 @@
-body
-{
-/*    font-size: 60px; */
-}
 
-select
-{
-/*    width: 300px;
-    height: 50px;*/
-}
-
-input[type=checkbox]
-{
-/*    width: 50px;
-    height: 50px;*/
-}
 
 p
 {
-/*    font-size: 40px; */
+    font-size: small;
 }
 
 h4
